# music-stream

./: LICENSE
frontend/: Makefile  bower.json  entry.js  hello.c  index.css  index.html  package-lock.json  package.json  stream-test.js  vorbis.c  webpack.config.js
frontend/src/: Audio.js  Audio.purs  Main.purs  SongRepository.purs
frontend/src/S3/: S3.js  S3.purs
stream-server/: build.sbt
stream-server/src/main/scala/stream/: Server.scala  Storage.scala
upload/: README.md  music-upload.cabal  stack.yaml  upload.sh
upload/src/: Main.hs
